--- a/project/app/templates/index.html
+++ b/project/app/templates/index.html
@@ -4,7 +4,21 @@
 
 {% block content %}
 
-    <p>Index</p>
-    <p><a href="{{ url_for('logout') }}">Logout</a></p>
+    <!--<p>Index</p>-->
+    <!--<p><a href="{{ url_for('logout') }}">Logout</a></p>-->
+
+    <main class="content-wrapper">
+        <div class="container-fluid">
+            <h1>Main Content</h1>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="text-center">
+                <span>Coded by <a href="https://si-dev.com/ru">SI-Dev</a>, 2018</span>
+            </div>
+        </div>
+    </footer>
 
 {% endblock %}
