--- a/project/app/templates/_nav.html
+++ b/project/app/templates/_nav.html
@@ -6,7 +6,9 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <a class="navbar-brand" href="#">Sidebar Nav</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"  aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon">
+            <i class="fas fa-bars" style="color:#007bff; font-size:28px;"></i>
+        </span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -59,9 +61,16 @@
                 <a class="nav-link" href="#">Item 5</a>
             </li>
         </ul>
-        <form class="form-inline ml-auto mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <!--<form class="form-inline ml-auto mt-2 mt-md-0">-->
+            <!--<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
+            <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+        <!--</form>-->
+        <div class="ml-auto mt-2 mt-md-0">
+            {% if current_user.is_anonymous %}
+                <a href="{{ url_for('login') }}">Login</a>
+            {% else %}
+                <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
+        </div>
     </div>
 </nav>
